Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

- Mon Mar 10 2008 - 0.9.0
- Make createrepo get run for local cobbler reposync invocations as needed
- patch to allow yumopts to override gpgcheck
- applied patch to send hostname from ISC
- added patch to allow --kopts/--ksmeta items to be cleared with --kopts=delete

- ??? - 0.8.3
- fix WebUI documentation URL
- fix bug in /etc/cobbler/modules.conf regarding pluggable authn/z
- fix default flags for yumdownloader
- fix for RHEL 4u6 DVD/tree import x86_64 arch detection

* Fri Feb 22 2008 - 0.8.2
- fix to webui to allow repos to be edited there on profile page
- disable local socket XMLRPC as nothing is using it.
- fixed findks.cgi so it supports multiple NICs
- import now supports both --path and --mirror as aliases, as before
- added change_profile.cgi for changing profiles from CGI
- added register_mac.cgi

* Wed Feb 20 2008 - 0.8.1
- bugfix in reposync code
- don't print tracebacks on SystemExit from optparse
- manpage tweaks

* Fri Feb 15 2008 - 0.8.0 (TBD)
- stable release of 0.7.* branch plus ...
- fixed potential user problem with source_repos in upgrade scenario
- additional higher level API functions for find, fixes for other higher level API functions
- better messaging when insufficient permissions on needed files
- update permissions on reposync fixes

* Thu Jan 31 2008 - 0.7.2 (0.8 rc)
- default_virt_file_size and default_virt_ram added to settings
- enforce permissions/selinux context after reposync
- better API for copying/renames, API consistancy cleanup
- support for renames that resolve dependencies, inclusion in CLI+webapp
- remove leading newline in rendered template files, which apparently breaks AutoYAST?
- recursive syncs automatically sync all subobjects when editing parent objects (default behavior)
- deletes can now be done recursively (optional --recursive on distro/profile remove)
- 'cobbler list' is now (re)sorted

* Wed Jan 09 2008 - 0.7.1