@@ -54,7 +54,7 @@ DEFAULTS = {
     "server"                      : "127.0.0.1",
     "snippetsdir"                 : "/var/lib/cobbler/snippets",
     "syslog_port"                 : 25150,
-    "tftpboot"                    : "/tftpboot",
+    "tftpboot"                    : -1, # special, see note below
     "tftpd_bin"                   : "/usr/sbin/in.tftpd",
     "tftpd_conf"                  : "/etc/xinetd.d/tftp",
     "webdir"                      : "/var/www/cobbler",
@@ -102,7 +102,14 @@ class Settings(serializable.Serializable):
        if datastruct is None:
           print _("warning: not loading empty structure for %s") % self.filename()
           return
+
        self._attributes = datastruct
+
+       # this last attribute is special.  In F9, the tftpboot location moves, so
+       # what we have in settings is not (neccessarily) correct.  So instead
+       # of using settings we determine it by looking at the OS.
+       self._attributes["tftpboot"] = utils.tftpboot_location()
+
        return self
 
    def __getattr__(self,name):
