@@ -28,7 +28,6 @@ run_post_install_trigger: 0
 server: '127.0.0.1'
 snippetsdir: /var/lib/cobbler/snippets
 syslog_port: 25150
-tftpboot: /tftpboot
 tftpd_bin: /usr/sbin/in.tftpd
 tftpd_conf: /etc/xinetd.d/tftp
 webdir: /var/www/cobbler
