@@ -6,6 +6,7 @@ Cobbler CHANGELOG
 - patch to allow yumopts to override gpgcheck
 - applied patch to send hostname from ISC
 - added patch to allow --kopts/--ksmeta items to be cleared with --kopts=delete
+- tftpboot location is now inferred from xinetd config (added for F9 compat)
 
 - ??? - 0.8.3
 - fix WebUI documentation URL
